--- a/index.html
+++ b/index.html
@@ -470,9 +470,10 @@
           <div class="portfolio-wrap">
             <img src="assets/img/project/cameroon.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
+              <h4>LULC Automation Using Machine Learning</h4>
 
               <div class="portfolio-links">
-                <a href="projects/hepagenda.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                <a href="projects/cameroon.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
                   class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
               </div>
             </div>
@@ -486,6 +487,7 @@
           <div class="portfolio-wrap">
             <img src="assets/img/project/ghana.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
+              <center>More info</center>
 
               <div class="portfolio-links">
                 <a href="projects/parkio.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox"
@@ -502,6 +504,7 @@
           <div class="portfolio-wrap">
             <img src="assets/img/project/india.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
+              <center>More info</center>
 
               <div class="portfolio-links">
                 <a href="projects/projectcit.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
