--- a/projects/cameroon.html
+++ b/projects/cameroon.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>HepAgenda - Electronic Medical Record</title>
+  <title> Automating Land Use and Land Cover Mapping Using Machine Learning </title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/favicon.ico" rel="icon">
   <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -46,31 +46,29 @@
         <div class="row">
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">HepAgenda - Electronic Medical Record</h2>
+            <h2 style="color:#12d640">LULC Automation using Machine Learning</h2>
             <ul>
-              <li><strong>Tech Stack</strong>: NodeJs, JavaScript, MySQL, VueJs, Express, Sequelize, Multer, Vuetify and
-                Yup.</li>
+              <li><strong>Tech Stack</strong>: Python, Github, Rasterio, Geopandas, Matplotlib, JupyterNotebook, Colab, GEE, Microsoft Azure, Streamlit, Flask, Tensorlow, QGIS</li>
               <li><strong>Github URL</strong>: <a
-                  href="https://github.com/ICEI-PUC-Minas-PPLES-TI/PLF-ES-2021-2-EXT-HepAgenda" target="_blank">Project
+                  href="https://omdena.com/projects/automating-land-use-and-land-cover-mapping/" target="_blank">Project
                   Link</a>
               </li>
               <li>
                 <strong>Certificate URL</strong>: <a
-                  href="https://sei.ufmg.br/sei/controlador_externo.php?acao=documento_conferir&id_orgao_acesso_externo=0"
-                  target="_blank">Lucas Ângelo Project Certificate</a>
+                  href="https://"
+                  target="_blank">Joseph Moturi Project Certificate</a>
                 <ul>
-                  <li>Verifier code: 1214331</li>
-                  <li>CRC code: 3C204496</li>
                 </ul>
               </li>
             </ul>
             <p>
-              This project specifically aims to develop an application that allows the user to
-              administrator book appointments more efficiently, view appointment schedule,
-              fill in specific data about patients, attach files as well as view
-              and then the patient's history. In this sense, aiming at a better
-              monitoring and understanding of the situation of each one, in addition to facilitating the administration
-              of physicians/system users who work in the clinic.
+              Mapping the extent of land use and land cover categories over time is essential for better environmental monitoring, urban planning, nature protection, conflict prevention, disaster reduction, rescue planning as well as long-term climate adaptation efforts.
+            </p>
+            <p>
+              This initiative was aimed at building a machine learning model that can accurately classify Land Use and Land Cover Changes (LULC) in satellite imagery. The trained model automatically generates the LULC map for a given region of interest. The map is visualized in a streamlit application.
+            </p>
+            <p>
+              
             </p>
             <p>
               Development of an electronic diary for booking appointments for patients with hepatitis at the hepatitis
