--- a/index.html
+++ b/index.html
@@ -456,16 +456,19 @@
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">Web-App</li>
+            <li data-filter=".omdena">Omdena</li>
+            <li data-filter=".workshop">Workshops</li>
+            <li data-filter=".others">Others</li>
+
           </ul>
         </div>
       </div>
 
       <div class="row portfolio-container">
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item omdena">
           <center>
-            <h4>Omdena- Cameroon</h4>
+            <h4>Cameroon Chapter</h4>
           </center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/cameroon.jpg" class="img-fluid" alt="">
@@ -480,31 +483,48 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item omdena">
           <center>
-            <h4>Omdena- Ghana</h4>
+            <h4>Ghana Chapter</h4>
           </center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/ghana.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <center>More info</center>
+              <h4>Shoreline Change Detection using Satellite Images</h4>
 
               <div class="portfolio-links">
-                <a href="projects/parkio.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox"
+                <a href="projects/ghana.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox"
                   title="Project Details"><i class="bx bx-info-circle"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="col-lg-4 col-md-6 portfolio-item omdena">
           <center>
-            <h4>Omdena- India</h4>
+            <h4>India Chapter</h4>
           </center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/india.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <center>More info</center>
+              <h4>Automating Glacier Mapping using Satellite Images</h4>
+
+              <div class="portfolio-links">
+                <a href="projects/india.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
+                  class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item omdena">
+          <center>
+            <h4>Palestine Chapter</h4>
+          </center>
+          <div class="portfolio-wrap">
+            <img src="assets/img/project/Palestine.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Bringing Palestine back to Map</h4>
 
               <div class="portfolio-links">
                 <a href="projects/projectcit.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
