--- a/projects/ghana.html
+++ b/projects/ghana.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>ParkIO - Condominium vehicle control</title>
+  <title>Shoreline Change Detection in Ghana through Satellite Images</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -56,34 +56,12 @@
               </li>
             </ul>
             <p>
-              The Condominium of the Housing Complex Santa Terezinha has about 918 apartments,
-              however there are only 2 entrances and approximately 800 spaces that are of
-              access to the residents and visitors of the condominium. Considering the above facts,
-              there is an obstacle to controlling the flow of vehicles in an agile and safe way.
+              Ghana has approximately 550 km [measured with Google Earth] of coastline. Along that coastline sits two major cities, about 46 other towns, communities and settlements, and a few industrial zones. Most of the smaller communities depend heavily on fishing for their economic activity and therefore tend to settle as close to the shoreline as possible. This was not an issue a few decades ago when the distance between the coastline and shoreline could sometimes be 50m to 100m wide during low tides but rising sea levels, increased tidal action, as well as some negative human activity [sandwinning] has led to accelerated soil erosion of the shores. This in turn led to most of the communities being at risk of property damage and loss from tidal flooding, and loss of life in extreme cases
+            </p>
+            
             </p>
             <p>
-              At all times, vehicles enter and leave the condominium, and the control of
-              how long visiting vehicles stay inside the condominium is difficult to be done.
-              Currently, there are rounds-guys that help in this process, however,
-              management is hampered due to the high flow.
-            </p>
-            <p>
-              ParkIO is a web application, developed with the aim of allowing the entrances
-              of the Condominium of the Santa Terezinha Housing Complex to control the entry
-              and exit of visiting vehicles. Thus, through this application, the condominium
-              administration will be able to verify which vehicles are inside the condominium
-              the longest, occupying the few spaces that the community parking offers.
-            </p>
-            <p>
-              With this application it will be possible to carry out a broader management
-              of the condominium. The administrators will be able to view the list of vehicles,
-              in this way, enabling a precise action on a given problem, the same applies
-              to other users, who using the system correctly, will offer condominium
-              residents a safer, more controlled and agile environment.
-            </p>
-            <p>
-              Members: Guilherme Gabriel, Henrique Monteiro, Lucas Ângelo and Victor Boaventura
-              and Vinícius Marini.
+              Members: .
             </p>
             <p>
               More information available on GitHub.
