--- a/projects/projectcit copy 2.html
+++ b/projects/projectcit copy 2.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Automating Land Use and Land Cover Mapping Using Machine Learning </title>
+  <title>Project Cit - Report problems in cities</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="../assets/img/favicon.ico" rel="icon">
+  <link href="../assets/img/favicon.png" rel="icon">
   <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -46,35 +46,51 @@
         <div class="row">
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">LULC Automation using Machine Learning</h2>
+            <h2 style="color:#12d640">Project Cit - Report problems in cities</h2>
             <ul>
-              <li><strong>Tech Stack</strong>: Python, Github, Rasterio, Geopandas, Matplotlib, JupyterNotebook, Colab, GEE, Microsoft Azure, Streamlit, Flask, Tensorlow, QGIS</li>
+              <li><strong>Tech Stack</strong>: HTML, CSS, JavaScript, MySQL, MySQL, PHP, Laravel and Blade.</li>
               <li><strong>Github URL</strong>: <a
-                  href="https://omdena.com/projects/automating-land-use-and-land-cover-mapping/" target="_blank">Project
+                  href="https://github.com/ICEI-PUC-Minas-PPLES-TI/plf-es-2021-1-ti3-6654100-parkio"
+                  target="_blank">Project
                   Link</a>
-              </li>
-              <li>
-                <strong>Certificate URL</strong>: <a
-                  href="https://"
-                  target="_blank">Joseph Moturi Project Certificate</a>
-                <ul>
-                </ul>
               </li>
             </ul>
             <p>
-              Mapping the extent of land use and land cover categories over time is essential for better environmental monitoring, urban planning, nature protection, conflict prevention, disaster reduction, rescue planning as well as long-term climate adaptation efforts.
+              Cit seeks to enable citizens to report structural problems in their cities, 
+              by sending evidence (eg photos of holes in the asphalt, electrical network in 
+              the middle of trees, among others.) and informing the address of the problem. 
+              In this way, other users in the region can vote on the existence 
+              and correction of that disorder.
             </p>
             <p>
-              This initiative was aimed at building a machine learning model that can accurately classify Land Use and Land Cover Changes (LULC) in satellite imagery. The trained model automatically generates the LULC map for a given region of interest. The map is visualized in a streamlit application.
-            </p>
-
-            <p>
-              Members: 
+              Project/Website made for the discipline
+              "Interdisciplinary Work: Application to Business Processes".
             </p>
             <p>
-              More information available on Github.
+              In view of this, the data can be viewed by accounts that register as 
+              entities capable of receiving complaints of problems in their respective 
+              locations, such as the city hall and/or state, which can correct them, 
+              thereby improving the quality of life for all. And common users 
+              (those who make the complaints) have the function of seeing the ranking 
+              of the best cities, which could be used in different ways and occasions 
+              (Ex: a mayor being elected through the dissemination of his results in the city. ).
             </p>
-            
+            <p>
+              Basically, a 100% functional application was developed, modeled
+              so that citizens can report problems in their cities.
+            </p>
+            <p>
+              Members: Guilherme Gabriel, Henrique Monteiro, José Maurício, Lucas Ângelo and Marco Tullio.
+            </p>
+            <p>
+              More information available on GitHub.
+            </p>
+            <div class="mb-2" style="display: flex; justify-content: center;">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/FdJnp8dPO2I"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            </div>
           </div>
         </div>
 
