skills and projects updates

--- a/projects/cameroon.html
+++ b/projects/cameroon.html
@@ -30,9 +30,7 @@
 
   <!-- =======================================================
     * Template Name: Personal - v2.2.0
-    * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-    * Author: BootstrapMade.com
-    * License: https://bootstrapmade.com/license/
+    
     ======================================================== -->
 </head>
 
@@ -46,18 +44,23 @@
         <div class="row">
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">LULC Automation using Machine Learning</h2>
+            <h2 class="centered-heading">LULC Automation using Machine Learning</h2>
             <ul>
-              <li><strong>Tech Stack</strong>: Python, Github, Rasterio, Geopandas, Matplotlib, JupyterNotebook, Colab, GEE, Microsoft Azure, Streamlit, Flask, Tensorlow, QGIS</li>
-              <li><strong>Github URL</strong>: <a
-                  href="https://omdena.com/projects/automating-land-use-and-land-cover-mapping/" target="_blank">Project
-                  Link</a>
+              <li><strong>Tech Stack</strong>: Python, Github, Rasterio, Geopandas, Matplotlib, JupyterNotebook, Colab, GEE, Microsoft Azure, Streamlit, Flask, Tensorlow, QGIS
               </li>
+              <li>
+                <strong>Project Duration</strong>: 8 Weeks
+              </li>
+              <li><strong>Github URL</strong>: <a
+                  href="https://omdena.com/projects/automating-land-use-and-land-cover-mapping/" target="_blank">Project Link</a>   
+              </li>
+              
               <li>
                 <strong>Certificate URL</strong>: <a
                   href="https://"
-                  target="_blank">Joseph Moturi Project Certificate</a>
+                  target="_blank"> My Project Certificate</a>
                 <ul>
+
                 </ul>
               </li>
             </ul>
@@ -69,7 +72,7 @@
             </p>
 
             <p>
-              Members: 
+              Members: Joseph Moturi, .
             </p>
             <p>
               More information available on Github.
