--- a/projects/india.html
+++ b/projects/india.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Project Cit - Report problems in cities</title>
+  <title>Automating Glacier Mapping of Ladakh using Satellite Imagery</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -30,9 +30,7 @@
 
   <!-- =======================================================
     * Template Name: Personal - v2.2.0
-    * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-    * Author: BootstrapMade.com
-    * License: https://bootstrapmade.com/license/
+  
     ======================================================== -->
 </head>
 
@@ -46,51 +44,31 @@
         <div class="row">
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">Project Cit - Report problems in cities</h2>
+            <h2 class="centered-heading">Automating Glacier Mapping using Satellite Imagery</h2>
             <ul>
-              <li><strong>Tech Stack</strong>: HTML, CSS, JavaScript, MySQL, MySQL, PHP, Laravel and Blade.</li>
+              <li><strong>Tech Stack</strong>: QGIS, .</li>
+              <li>
+                <strong>Project Duration</strong>: 6 Weeks
+              </li>
               <li><strong>Github URL</strong>: <a
-                  href="https://github.com/ICEI-PUC-Minas-PPLES-TI/plf-es-2021-1-ti3-6654100-parkio"
-                  target="_blank">Project
-                  Link</a>
+                  href="https://github.com/"
+                  target="_blank">Project Link</a>
+                  
               </li>
             </ul>
             <p>
-              Cit seeks to enable citizens to report structural problems in their cities, 
-              by sending evidence (eg photos of holes in the asphalt, electrical network in 
-              the middle of trees, among others.) and informing the address of the problem. 
-              In this way, other users in the region can vote on the existence 
-              and correction of that disorder.
+              Trans-Himalayan Ladakh is susceptible to climate change impacts, including rapid glacier retreat due to global warming. The region heavily relies on Cryosphere-fed water sources, especially glacier-derived surface water, which is vital for the majority of its population. Reports indicate an alarming annual glacier retreat rate exceeding 6%, with some exceptions like the advancing Puche glacier. To ensure sustainable water availability, it is crucial to employ time series glacier mapping for monitoring Cryospheric resources. This approach aids in projecting future water availability, facilitating informed planning and effective management of water resources for Ladakh's communities.
             </p>
             <p>
-              Project/Website made for the discipline
-              "Interdisciplinary Work: Application to Business Processes".
+              The region of Ladakh possesses various temporal inventories of its glaciers, both local and regional/global, which document their changes over time. However, a more efficient and accurate annual mapping of glaciers, especially debris-covered ones, is currently essential. This endeavor aims to develop precise tools utilizing satellite imagery for temporal glacier mapping. The ultimate objective is to establish a GIS dashboard that generates a comprehensive glacier map of Ladakh. Beyond mapping, the larger project envisions connecting local communities, regional authorities, and academia through AI tools, facilitating effective water resource management amid the urgent climate crisis. The initiative's focal point is to identify and address challenges faced by Ladakh's communities.
             </p>
             <p>
-              In view of this, the data can be viewed by accounts that register as 
-              entities capable of receiving complaints of problems in their respective 
-              locations, such as the city hall and/or state, which can correct them, 
-              thereby improving the quality of life for all. And common users 
-              (those who make the complaints) have the function of seeing the ranking 
-              of the best cities, which could be used in different ways and occasions 
-              (Ex: a mayor being elected through the dissemination of his results in the city. ).
-            </p>
-            <p>
-              Basically, a 100% functional application was developed, modeled
-              so that citizens can report problems in their cities.
-            </p>
-            <p>
-              Members: Guilherme Gabriel, Henrique Monteiro, José Maurício, Lucas Ângelo and Marco Tullio.
+              Members: Joseph Moturi, .
             </p>
             <p>
               More information available on GitHub.
             </p>
-            <div class="mb-2" style="display: flex; justify-content: center;">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/FdJnp8dPO2I"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            </div>
+            
           </div>
         </div>
 
