--- a/projects/palestine.html
+++ b/projects/palestine.html
@@ -30,10 +30,7 @@
 
   <!-- =======================================================
     * Template Name: Personal - v2.2.0
-    * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-    * Author: BootstrapMade.com
-    * License: https://bootstrapmade.com/license/
-    ======================================================== -->
+   ========= -->
 </head>
 
 <body data-gr-c-s-loaded="true">
@@ -46,51 +43,32 @@
         <div class="row">
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">Project Cit - Report problems in cities</h2>
+            <h2 class="centered-heading">Enhancing the Quality of Available Maps in Palestine using Deep Learning Model</h2>
             <ul>
-              <li><strong>Tech Stack</strong>: HTML, CSS, JavaScript, MySQL, MySQL, PHP, Laravel and Blade.</li>
+              <li><strong>Tech Stack</strong>: QGIS, Jupyter Notebook, Colab.</li>
+              <li>
+                <strong>Project Duration</strong>: 6 Weeks
+              </li>
               <li><strong>Github URL</strong>: <a
-                  href="https://github.com/ICEI-PUC-Minas-PPLES-TI/plf-es-2021-1-ti3-6654100-parkio"
-                  target="_blank">Project
-                  Link</a>
+                  href="https://github.com/"
+                  target="_blank">Project Link</a>
+                  
               </li>
             </ul>
             <p>
-              Cit seeks to enable citizens to report structural problems in their cities, 
-              by sending evidence (eg photos of holes in the asphalt, electrical network in 
-              the middle of trees, among others.) and informing the address of the problem. 
-              In this way, other users in the region can vote on the existence 
-              and correction of that disorder.
+              Maps play a vital role in daily life, aiding navigation, business promotion, healthcare recommendations, community connectivity, and infrastructure maintenance. Regrettably, Palestine faces a dearth of accurate map applications, with Google Maps inaccuracies stemming from subpar satellite images. Leveraging artificial intelligence (AI) presents an opportunity to enhance maps, benefiting businesses, governments, and individuals by delivering precise, current, and valuable information.
             </p>
             <p>
-              Project/Website made for the discipline
-              "Interdisciplinary Work: Application to Business Processes".
+              This project aimed at developing a Deep Learning model that can be used to enhance the quality of existing maps like Google Maps by utilizing GANs on low-quality satellite images and to depict accurate roads while removing nonexistent ones from the map.
             </p>
             <p>
-              In view of this, the data can be viewed by accounts that register as 
-              entities capable of receiving complaints of problems in their respective 
-              locations, such as the city hall and/or state, which can correct them, 
-              thereby improving the quality of life for all. And common users 
-              (those who make the complaints) have the function of seeing the ranking 
-              of the best cities, which could be used in different ways and occasions 
-              (Ex: a mayor being elected through the dissemination of his results in the city. ).
-            </p>
-            <p>
-              Basically, a 100% functional application was developed, modeled
-              so that citizens can report problems in their cities.
-            </p>
-            <p>
-              Members: Guilherme Gabriel, Henrique Monteiro, José Maurício, Lucas Ângelo and Marco Tullio.
+              Members: Joseph Moturi, .
             </p>
             <p>
               More information available on GitHub.
             </p>
-            <div class="mb-2" style="display: flex; justify-content: center;">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/FdJnp8dPO2I"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-            </div>
+            </p>
+            
           </div>
         </div>
 
