--- a/projects/palestine.html
+++ b/projects/palestine.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Project Cit - Report problems in cities</title>
+  <title>Enhancing the Quality of Available Maps in Palestine using Deep Learning Model</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
